--- a/Backend/package.json
+++ b/Backend/package.json
@@ -28,6 +28,7 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@nestjs/cli": "^10.0.0"
     "@types/node": "^24.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
