--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/main.ts",
+    "start": "node dist/main.js",
     "start:dev": "nest start --watch",
     "build": "nest build",
     "test": "echo \"Error: no test specified\" && exit 1"
